# rebase

./: .gitignore  .travis.yml  README.md  rebase.cabal  stack.yaml
.github/workflows/: ci.yaml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.14.1/: package.cache  rebase-1.22-inplace.conf
