name:
  rebase
version:
  1.0.5
synopsis:
  A more progressive alternative to the "base" package
description:
  This package is intended for those who are tired of keeping
  long lists of dependencies to the same essential libraries in each package
  as well as the endless imports of the same APIs all over again.
  It also supports the modern tendencies in the language.
  .
  To solve those problems this package does the following:
  .
  * Reexport the original APIs under the \"Rebase\" namespace.
  .
  * Export all the possible non-conflicting symbols from the \"Rebase.Prelude\" module.
  .
  * Give priority to the modern practices in the conflicting cases.
  .
  The policy behind the package is only to reexport the non-ambiguous
  and non-controversial APIs, which the community has obviously settled on.
  The package is intended to rapidly evolve with the contribution from the community,
  with the missing features being added with pull-requests.
homepage:
  https://github.com/nikita-volkov/rebase
bug-reports:
  https://github.com/nikita-volkov/rebase/issues
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2016, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/rebase.git

library
  hs-source-dirs:
    library
  default-extensions:
    NoImplicitPrelude, NoMonomorphismRestriction
  default-language:
    Haskell2010
  exposed-modules:
    Rebase.Prelude
    Rebase.Data.List1
    Rebase.Data.Functor.Identity
    Rebase.Data.Bifunctor
    Rebase.Data.List
    Rebase.Data.Hashable
    Rebase.Data.IntMap.Strict
    Rebase.Data.IntSet
    Rebase.Data.Map.Strict
    Rebase.Data.Sequence
    Rebase.Data.Set
    Rebase.Data.HashMap.Strict
    Rebase.Data.HashSet
    Rebase.Data.Vector
    Rebase.Data.Vector.Mutable
    Rebase.Data.ByteString
    Rebase.Data.ByteString.Builder
    Rebase.Data.ByteString.Char8
    Rebase.Data.ByteString.Lazy
    Rebase.Data.ByteString.Lazy.Char8
    Rebase.Data.ByteString.Short
    Rebase.Data.Text
    Rebase.Data.Text.Encoding.Error
    Rebase.Data.Text.Lazy
    Rebase.Data.Text.Lazy.Builder
    Rebase.Data.Time
    Rebase.Data.Scientific
    Rebase.Data.UUID
    Rebase.Data.DList
    Rebase.Data.Void
    Rebase.Data.Void.Unsafe
    Rebase.Data.Profunctor
    Rebase.Data.Profunctor.Unsafe
    Rebase.Data.Functor.Contravariant
    Rebase.Data.Functor.Contravariant.Divisible
    Rebase.Contravariant.Extras
    Rebase.Data.Semigroup
    Rebase.Data.List.NonEmpty
    Rebase.Data.Bifunctor.Apply
    Rebase.Data.Functor.Alt
    Rebase.Data.Functor.Apply
    Rebase.Data.Functor.Bind
    Rebase.Data.Functor.Extend
    Rebase.Data.Functor.Plus
    Rebase.Data.Semigroup.Bifoldable
    Rebase.Data.Semigroup.Bitraversable
    Rebase.Data.Semigroup.Foldable
    Rebase.Data.Semigroup.Traversable
    Rebase.Data.Semigroupoid
    Rebase.Control.DeepSeq
    Rebase.Control.Monad.IO.Class
    Rebase.Control.Monad.Trans.Class
    Rebase.Control.Monad.Trans.Cont
    Rebase.Control.Monad.Trans.Except
    Rebase.Control.Monad.Trans.Maybe
    Rebase.Control.Monad.Trans.Reader
    Rebase.Control.Monad.Trans.State.Lazy
    Rebase.Control.Monad.Trans.State.Strict
    Rebase.Control.Monad.Trans.Writer.Lazy
    Rebase.Control.Monad.Trans.Writer.Strict
    Rebase.Control.Monad.Cont.Class
    Rebase.Control.Monad.Error.Class
    Rebase.Control.Monad.Reader.Class
    Rebase.Control.Monad.State.Class
    Rebase.Control.Monad.Writer.Class
    Rebase.Control.Monad.Trans.Either
    Rebase.Data.Either.Combinators
    Rebase.Data.Either.Validation
    Rebase.Control.Monad.Fail
    Rebase.Control.Concurrent.STM
  build-depends:
    -- concurrency:
    stm >= 2 && < 3,
    -- data:
    hashable >= 1 && < 2,
    vector >= 0.10 && < 0.12,
    containers >= 0.5 && < 0.6,
    unordered-containers >= 0.2 && < 0.3,
    bytestring >= 0.10 && < 0.11,
    text >= 1 && < 2,
    scientific >= 0.3 && < 0.4,
    uuid == 1.*,
    dlist >= 0.7 && < 0.9,
    void >= 0.7 && < 0.8,
    time >= 1.5 && < 2,
    -- control:
    bifunctors >= 5 && < 6,
    profunctors >= 5 && < 6,
    contravariant >= 1 && < 2,
    contravariant-extras >= 0.3.2 && < 0.4,
    semigroups >= 0.16 && < 0.19,
    semigroupoids >= 5 && < 6,
    deepseq >= 1.4 && < 2,
    transformers >= 0.4 && < 0.6,
    mtl >= 2.2 && < 3.0,
    either >= 4.4 && < 5,
    fail >= 4.9 && < 5,
    -- general:
    base-prelude >= 0.1 && < 2,
    base >= 4.6 && < 5
